# aoc

./: .gitignore
2022/: 01.py  (+3 more)
rust/: Cargo.toml  README.md  init_day  select_day
rust/2022/day12/: Cargo.toml
rust/2022/day12/src/: main.rs
rust/2023/: Cargo.toml  init_day
rust/2023/go/: go.mod  go.sum  main.go
rust/2023/src/: init_day  main.rs  select_day
rust/2023/src/day01/: mod.rs
rust/2023/src/day02/: mod.rs
rust/2023/src/day03/: mod.rs
rust/2023/src/day04/: mod.rs
rust/2023/src/day04_nom/: mod.rs
rust/2023/src/day04_optimized/: mod.rs
rust/2023/src/day05/: mod.rs  tests.rs
rust/2023/src/day06/: mod.rs
rust/2023/src/day06_fast_af_boiiiii/: mod.rs
rust/2023/src/day07/: mod.rs
rust/2023/src/day08/: mod.rs
rust/2023/src/day09/: mod.rs
rust/2023/src/day09_lagrange/: mod.rs
rust/2023/src/day09_legendre/: derivation.rnote  mod.rs
rust/2023/src/day10/: mod.rs
rust/2023/src/day11/: mod.rs
rust/2023/src/day12/: mod.rs
rust/2023/src/day13/: mod.rs
rust/2023/src/day14/: mod.rs
rust/2023/src/day15/: mod.rs
rust/2023/src/day16/: mod.rs
rust/2023/src/day17/: mod.rs
rust/2023/src/day18/: mod.rs
rust/2023/src/day19/: mod.rs
rust/aoc-utils/: Cargo.toml
rust/aoc-utils/src/: coordinate.rs  lib.rs  vec2.rs
rust/aocutils/: Cargo.toml
rust/aocutils/src/: grid.rs  lib.rs  vec2.rs
rust/src/: lib.rs  main.rs
rust/src/template/: main.rs
rust/src/utils/: grid.rs  input.rs  mod.rs  vec2.rs  vec3.rs
rust/src/year2015/: mod.rs
rust/src/year2023/: mod.rs
rust/src/year2024/: mod.rs
rust/src/year2025/: mod.rs
rust/src/year2026/: mod.rs
(+104 files in other folders)
