[package]
name = "aoc02023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aocutils = { version = "0.1.0", path = "../aocutils" }
btree-range-map = "0.7.2"
console = "0.15.7"
intervaltree = "0.2.7"
itertools = "0.12.0"
nalgebra = "0.32.3"
nom = "7.1.3"
num = "0.4.1"
num-integer = "0.1.45"
pathfinding = "4.6.0"
rand = "0.8.5"
rayon = "1.8.0"
regex = "1.10.2"
